# email-agent

./: .env.example  .gitignore  README.md  email-agent.db  main.py  prompt_flow.xml  pyproject.toml
agent/: dependencies.py  main.py
agent/routes/: agent.py
agent/services/: agent_service.py  draft_models.py  ws_client.py
backend/: database.py  main.py  models.py
backend/routes/: auth.py  email.py  ws_notifications.py
backend/services/: mail_service.py
backend/static/: app.js  index.html  styles.css
config/: settings.py
config/prompts/: README.md  __init__.py  base.py  classify_wf.py  email.py  registry.py  scheduling.py  shared.py  system_prompt.py  ticket.py
notebook/: aa_ticket.ipynb  demo_langgraph_email_agent_fixed_(1).ipynb  meeting_schedule.ipynb
scripts/: run.py
src/app/api/: routes.py
src/app/sessions/: conversation.py  manager.py
src/core/: state_registry.py  states.py
src/integrations/llm/: client.py
src/integrations/mail/: client.py  sync_client.py
src/memory/: checkpointer.py
src/nodes/shared/: decision_nodes.py  email_nodes.py
src/nodes/specialized/: meeting_nodes.py
src/state/: base.py
src/workflows/: meeting_scheduler.py  registry.py  router.py
src/workflows/scheduling/: edges.py  graph.py  nodes.py  state.py
src/workflows/ticket/: edges.py  graph.py  nodes.py  state.py
test/: conftest.py  test_agent_proxy.py  test_auth_api.py  test_email_api.py
test/config/prompts/: test_prompt_builder.py
