[project]
name = "email-agent"
version = "0.1.0"
description = "AI-powered email automation agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.39.0",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "pydantic-settings>=2.13.1",
    "flask>=3.0.0",
    "flask-restful>=0.3.10",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "werkzeug>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
