[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.39.0",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "pydantic-settings>=2.13.1",
]
